tests/valid_seq/int_impl_imports_helper_1.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module int_impl_imports_helper_1.
:- interface.

:- type bar == int.
